third_party/move/move-prover/tests/sources/functional/global_vars.exp
Move prover returns: exiting with verification errors
error: precondition does not hold at this call
    ┌─ tests/sources/functional/global_vars.move:145:9
    │
145 │         requires access_verified;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_vars.move:153: do_privileged_invalid
    =         _s = <redacted>
    =     at tests/sources/functional/global_vars.move:145: requires_access (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/global_vars.move:181:9
    │
181 │         ensures type_has_property<u64>;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_vars.move:177: expect_property_of_u64_invalid
    =     at tests/sources/functional/global_vars.move:178: expect_property_of_u64_invalid
    =     at tests/sources/functional/global_vars.move:165: give_property_to
    =     at tests/sources/functional/global_vars.move:167: give_property_to (spec)
    =     at tests/sources/functional/global_vars.move:179: expect_property_of_u64_invalid
    =     at tests/sources/functional/global_vars.move:181: expect_property_of_u64_invalid (spec)

error: global memory invariant does not hold
    ┌─ tests/sources/functional/global_vars.move:218:5
    │
218 │     invariant global<R>(@0).v <= limit;
    │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_vars.move:228: limit_change_invalid
    =         s = <redacted>
    =     at tests/sources/functional/global_vars.move:229: limit_change_invalid
    =     at tests/sources/functional/global_vars.move:220: publish
    =         s = <redacted>
    =     at tests/sources/functional/global_vars.move:221: publish
    =     at tests/sources/functional/global_vars.move:222: publish
    =     at tests/sources/functional/global_vars.move:230: limit_change_invalid
    =     at tests/sources/functional/global_vars.move:232: limit_change_invalid (spec)
    =     at tests/sources/functional/global_vars.move:218

error: post-condition does not hold
    ┌─ tests/sources/functional/global_vars.move:120:9
    │
120 │         ensures sum_of_T2 == 2;
    │         ^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_vars.move:116: opaque_call_add_sub_invalid
    =     at tests/sources/functional/global_vars.move:117: opaque_call_add_sub_invalid
    =     at tests/sources/functional/global_vars.move:96: opaque_add (spec)
    =     at tests/sources/functional/global_vars.move:117: opaque_call_add_sub_invalid
    =     at tests/sources/functional/global_vars.move:106: opaque_sub (spec)
    =     at tests/sources/functional/global_vars.move:117: opaque_call_add_sub_invalid
    =     at tests/sources/functional/global_vars.move:96: opaque_add (spec)
    =     at tests/sources/functional/global_vars.move:118: opaque_call_add_sub_invalid
    =     at tests/sources/functional/global_vars.move:120: opaque_call_add_sub_invalid (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/global_vars.move:205:9
    │
205 │         ensures type_has_property<u64>;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_vars.move:201: opaque_expect_property_of_u64_invalid
    =     at tests/sources/functional/global_vars.move:202: opaque_expect_property_of_u64_invalid
    =     at tests/sources/functional/global_vars.move:191: opaque_give_property_to (spec)
    =     at tests/sources/functional/global_vars.move:203: opaque_expect_property_of_u64_invalid
    =     at tests/sources/functional/global_vars.move:205: opaque_expect_property_of_u64_invalid (spec)

error: global memory invariant does not hold
    ┌─ tests/sources/functional/global_vars.move:218:5
    │
218 │     invariant global<R>(@0).v <= limit;
    │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_vars.move:224: update_invalid
    =     at tests/sources/functional/global_vars.move:225: update_invalid
    =     at tests/sources/functional/global_vars.move:218
